Fixed font sizing on iPhone 6/7/8 and S8

--- a/assets/style.css
+++ b/assets/style.css
@@ -512,6 +512,9 @@ img#rightBiome {
     #emailField {
         bottom: calc((100% - 50px) / 4.5);
     }
+    #emailInput {
+        font-size: 12px;
+    }
 }
 
 @media screen and (min-width: 600px) {
